# RM-copilot-for-Wealth-management

./: README.md  readme.md  requirements.txt  requirements_app.txt  requirements_eval.txt
WM_Copilot_Karthik/: README.md  (+16 more)
Wealth_Management_COP/: .env.example  .gitignore  Capstone-P6-Relationship-Manager-WealthMgmt-LangGraph.md  Comprehensive_Technical_Presentation.md  Implementation_Plan.md  Instructions.txt  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  RUN_GUIDE.md  app.py  project_presentation_guide.md  pyproject.toml  ragas_evaluation_results.json  requirements.txt  run_eval.py  run_ragas_eval.py  run_streamlit.py  test_langgraph.py  test_streamlit_mock.py  token_optimization_strategy.md  ui_testing_guide.md
Wealth_Management_COP/.streamlit/: config.toml
Wealth_Management_COP/app/: streamlit_app.py
Wealth_Management_COP/app/components/: brief_renderer.py  client_info_view.py  client_selector.py  escalation_view.py  evaluation_view.py  market_data_view.py  sentiment_view.py  upload_view.py
Wealth_Management_COP/config/: __init__.py  settings.py
Wealth_Management_COP/data/clients/: clients.json
Wealth_Management_COP/data/golden_set/: evaluation_queries.json
Wealth_Management_COP/notebooks/: 01_ingestion_demo.ipynb  02_agent_demo.ipynb  03_evaluation.ipynb  evaluation.ipynb
Wealth_Management_COP/src/: agent.py  models.py  tools.py
Wealth_Management_COP/tests/: test_agent.py  test_citation_validator.py  test_e2e_smoke.py  test_guardrails.py  test_ingestion.py  test_live_price.py  test_models.py  test_rag_retriever.py  test_sentiment.py  test_tools.py
(+134 files in other folders)
